--- a/package.json
+++ b/package.json
@@ -2,10 +2,22 @@
   "name": "socket-void-test",
   "version": "0.1.0",
   "private": true,
+  "main": "server/index.js",
   "dependencies": {
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
+    "massive": "^6.1.3",
+    "node-sass": "^4.13.0",
+    "nodemon": "^2.0.1",
+    "query-string": "^6.9.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-scripts": "3.2.0"
+    "react-emoji": "^0.5.0",
+    "react-router-dom": "^5.1.2",
+    "react-scripts": "3.2.0",
+    "react-scroll-to-bottom": "^1.3.2",
+    "socket.io": "^2.3.0",
+    "socket.io-client": "^2.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
